search bar on admin

--- a/src/app/admin/menu/menu.component.html
+++ b/src/app/admin/menu/menu.component.html
@@ -9,7 +9,7 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/admin/users">
-          Users
+          Utilisateurs
         </a>
       </li>
       <li class="nav-item">
