--- a/src/app/shared/components/modals/retrait/retrait.component.html
+++ b/src/app/shared/components/modals/retrait/retrait.component.html
@@ -18,7 +18,7 @@
 
   <div class="flex items-center justify-between mt-4">
     <button type="submit" class="px-4 py-2 bg-blue-500 text-white rounded-md">Retrait</button>
-    <button type="button" (click)="closeModal()" class="bg-red-500 px-4 py-2 text-white rounded-md">Close</button>
+    <button type="button" (click)="closeModal()" class="bg-red-500 px-4 py-2 text-white rounded-md">Fermer</button>
   </div>
 </form>
 
