--- a/src/app/shared/components/modals/user-show/user-show.component.html
+++ b/src/app/shared/components/modals/user-show/user-show.component.html
@@ -21,7 +21,7 @@
   </div>
 
   <div class="flex items-center justify-between mt-4">
-    <button type="submit" class="px-4 py-2 bg-blue-500 text-white rounded-md">Update</button>
+    <button type="submit" class="px-4 py-2 bg-blue-500 text-white rounded-md">Editer</button>
     <button type="button" (click)="closeModal()" class="px-4 py-2 text-gray-500 rounded-md">Close</button>
   </div>
 </form>
