change compiler version

--- a/src/app/shared/components/modals/notification/notification.component.html
+++ b/src/app/shared/components/modals/notification/notification.component.html
@@ -8,5 +8,5 @@
   <p>{{ message }}</p>
 </div>
 <div class="modal-footer">
-  <button type="button" class="btn btn-secondary" (click)="bsModalRef.hide()">Close</button>
+  <button type="button" class="btn btn-primary bg-red-500" (click)="bsModalRef.hide()">Close</button>
 </div>
